--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
   width: 50%;
 
 }
+
+.h-300{
+  height: 300px;
+}
 .col{
   background-color: green;
 
@@ -45,4 +49,32 @@
 
 .row:nth-child(2) .col{
   background-color: yellow;
+}
+
+
+.box{
+  height: 400px;
+  border: 1px solid black;
+  background-color: CadetBlue;
+  position: relative;
+}
+
+
+.central-content{
+  height: 100px;
+  width: 200px;
+  background-color: white;
+  border: 1px solid black;
+  margin: auto;
+}
+
+
+
+.central-content2{
+  height: 100px;
+  width: 200px;
+  background-color: white;
+  border: 1px solid black;
+  margin: auto;
+  margin-top: 30px;
 }
