--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,51 @@
   width: 50%;
 
 }
+.h-50{
+  height: 50px;
+}
+
+.w-50{
+  width: 50px;
+}
 
 .h-300{
   height: 300px;
 }
+.box-1{
+  border: 1px solid black
+}
+/* misure da cancellare */
+.box-1.centeredbox{
+  top: 50%;
+  left: 50%;
+  transform: translate(-70%, -40%);
+  position: absolute;
+
+}
+
+ .box-2{
+   width: 50px;
+   height: 50px;
+   border: 1px solid black;
+   margin:right 30px;
+ }
+.f-right{
+  float: right;
+}
+
+.logotext{
+  padding: 30px;
+  text-align: center;
+}
+
+
+.box-2.f-right{
+  position: relative;
+  top:50%;
+  transform: translate(0,-50%);
+}
+
 .col{
   background-color: green;
 
@@ -45,6 +86,28 @@
 
 }
 
+nav{
+  width: 100%;
+  text-align: right;
+  color: grey;
+}
+
+ul.menu li a{
+  text-decoration: none;
+  padding: 8px;
+  color: darkgrey;
+  font-size: 20px;
+
+
+}
+
+
+ul.menu li{
+  display: inline-block;
+  height: 45px;
+  line-height: 45px;
+
+}
 
 
 .row .col{
@@ -57,7 +120,7 @@
 }
 
 
-.box{
+.bigbox{
   height: 300px;
   border: 1px solid black;
   background-color: CadetBlue;
@@ -83,7 +146,7 @@
   margin: auto;
   margin-top: 30px;
 }
-.colbox, .tablebox{
+.tablebox{
   height: 300px;
   background-color: blue;
   border: 1px solid black;
