--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,19 @@
   float: right;
 }
 
-.logotext{
+/* .logotext{
   padding: 30px;
   text-align: center;
-}
+} */
+ .logo{
+   height: 60px;
+   width: 60px;
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
 
+
+ }
 
 .box-2.f-right{
   position: relative;
@@ -134,6 +142,7 @@ ul.menu li{
   background-color: white;
   border: 1px solid black;
   margin: auto;
+
 }
 
 
@@ -150,9 +159,15 @@ ul.menu li{
   height: 300px;
   background-color: blue;
   border: 1px solid black;
+  background-image: url()
 }
 
+.tabletext{
+  text-align: center;
+  font-size: 20px;
+  color: white;
 
+}
 
 .colbox1{
   height: 350px;
@@ -167,4 +182,16 @@ ul.menu li{
 .col-25{
   background-color: DarkBlue;
   width: 25%;
+}
+
+.dado{
+  width: 100%;
+  height: 100%;
+
+}
+
+.footlink{
+  width: 100%;
+  text-align: center;
+  color: grey;
 }
