--- a/css/style.css
+++ b/css/style.css
@@ -1,291 +1,564 @@
 *{
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.w-30{
+  width: 30%;
+}
+
+.width-40p{
+  width: 40%;
+}
+
+.w-50{
+  width: 50%;
+}
+
+.width-60p{
+  width: 60%;
+}
+
+.w-70{
+  width: 70%;
 }
 
 
-.maincontent{
-  margin:0;
-}
 
 .h-100{
   height: 100px;
 }
-.col-50{
-  width: 50%;
 
+.height-200{
+  height: 200px;
 }
-.h-50{
-  height: 50px;
-}
-
-.w-50{
-  width: 50px;
-}
-
 .h-300{
-  height: 300px;
+  height: 350px;
 }
-.select-lingua{
-  color: DarkSlateGrey;
+
+.height-400{
+  height: 400px;
+}
+
+.height-500{
+  height: 500px;
+}
+
+.h-650{
+  height: 650px;
+}
+
+.h-700{
+  height: 700px;
+}
+
+
+
+.container{
+  width: 60%;
+  margin: 0 auto;
+}
+
+.container-large{
+  width: 70%;
+  margin: 0 auto;
+}
+
+
+header > hr,{
   border: none;
-  text-align: center;
-  text-decoration: none;
-  font-size: 15px;
-
-
+  height: 2px;
+  background-color: #738491;
 }
-/* misure da cancellare */
-.box-1.centeredbox{
-  top: 50%;
-  left: 50%;
-  transform: translate(-70%, -30%);
-  position: absolute;
 
+.row::after{
+  content: '';
+  clear: both;
+  display: table;
 }
-.left1{
-  margin-right: 30px;
+
+.col{
+  float: left;
 }
- .box-2{
-   width: 50px;
-   height: 50px;
-   border: 1px solid black;
-   margin:right 30px;
- }
-.f-right{
+
+.col-right{
   float: right;
 }
 
+.box-1cont{
+  height: 800px;
+  position: relative;
+}
 
- .logo-box{
+.img-extender{
+  width: 40%;
+  height: 3.8vw;
+  position: absolute;
+  border-top: 2.5px solid rgb(51,71,92);
+  background-color: #AFEBE4;
+  left: 0;
+  bottom: 0;
+}
+
+.box1grande{
+  background-image: url('img/hero-clouds.svg');
+  background-color: #FFF2EE;
+  background-size: 60%;
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+.box-1cont{
+  background-image: url('img/hero-bg.svg');
+  background-position: right bottom;
+  background-size: 60%;
+  /* background-size:cover; */
+  background-repeat: no-repeat;
+  /* background-color: #FFF2EE; */
+  padding-top: 90px;
+}
+
+.box-1cont .row .col h1{
+    color: #33475B;
+    font-size: 60px;
+    margin-bottom: 40px;
+}
+
+.box-1cont .row .col > p{
+    color: #33475B;
+    font-size: 18px;
+    margin-bottom: 40px;
+}
+
+.box-1cont .row .col p:last-child{
+    color: #33475B;
+    font-size: 14px;
+    margin-top: 40px;
+}
+
+.nav-bar{
+  background-color: #F4F9FD;
+}
+
+.box2grande-row-top{
+  background-color: #F4F9FD;
+}
+
+.box2grande-row-center{
+  background: linear-gradient(45deg, #00a4bd, #00bda5);
+}
+
+.bg-footer{
+  background-color: #32495B;
+}
+.hero-divisory{
+  border: 4px solid #33475B;
+  border-left: 0;
+  border-right: 0;
+  background-color: #AFEBE4;
+}
+
+.navbar-login div{
+  line-height: 100px;
   font-size: 20px;
-
-  position: absolute;
-  top:34%;
-  left:34%;
-
- }
-
-.box-2.f-right{
-  position: relative;
-  top:50%;
-  transform: translate(0,-50%);
+  color: #32495B;
 }
 
-.col{
-  background-color: green;
+/* .navbar-login span:last-child{
+  margin-left: 30px;
+} */
 
-}
-
-.col{
-  float: left;
-  position: relative;
-
-}
-
-
-.row::after{
-  clear: both;
-  content: "";
-  display: table;
-
-}
-
-.col-33{
-  width: calc(100% / 3)
-
-
-}
-
-.row{
-  position: relative;
-}
-
-
-/* inizio css per bloccotext */
-.bloccotext{
-  position: absolute;
-  height: 300px;
-  width: 300px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-
-
-}
-.textbox{
-
-  margin-left:25px;
-}
-
-
-.b1{
-  position: absolute;
-  left: 25px;
-}
-
-.buttonhub{
-  background-color: orange;
-  border: none;
-  text-align: center;
-  text-decoration: none;
-  font-size: 15px;
+#button-freehub{
+  background-color: #FE775A;
+  border: 1px solid #FE775A;
+  font-size: 20px;
+  color: white;
   padding: 10px;
- }
 
-.grow-text{
-  padding:20px;
+}
+
+#button-login{
+  background-color: white;
+  border: 1px solid #f57a5f;
   font-size: 20px;
+  color: #FE775A;
+  padding: 10px 20px;
+  margin-right: 10px;
   margin-left: 10px;
 
 }
- h6{
-   margin-top: 10px;
- }
-/* fine css per bloccotext */
-nav{
-  width: 100%;
-  text-align: right;
-  color: grey;
-}
-ul.menu li:hover{
-  background-color: lightgrey;
-  cursor: pointer;
-}
-ul.menu li a{
-  text-decoration: none;
-  padding: 8px;
-  color: darkgrey;
-  font-size: 20px;
-
-
-}
-
-
-ul.menu li{
-  display: inline-block;
-  height: 45px;
-  line-height: 45px;
-
-}
-/* fine css nav menu */
-
-.row .col{
-  border: 1px solid black;
-}
-
-
-.row:nth-child(2) .col{
-  background-color: yellow;
-}
-
-
-.bigbox{
-  height: 800px;
-  border: 1px solid black;
-  background-color: CadetBlue;
-  position: relative;
-}
-
-
-.central-content{
-  height: 200px;
-  width: 300px;
-  background-color: white;
-  border: 1px solid black;
-  margin: auto;
-
-}
 
 
 
-.central-content2{
-  height: 100px;
-  border: 1px solid black;
-  margin: auto;
-  margin-top: 30px;
-  text-align: center;
-  padding: 20px;
-
-}
-
-.content3{
-  height: 300px;
-  margin-top: 20px;
-  border: 1px solid black;
-}
-.box-cassa, .box-cassa1{
+.boxlearn{
   width: 200px;
   height: 200px;
-  border: 1px solid black;
-  float: left;
-
+  margin: auto;
+  margin-top: 130px;
 
 }
- #hubspot-offers{
-   padding-top: 10px;
- }
 
-.tablebox{
-  height: 300px;
-  background-color: blue;
-  border: 1px solid black;
-  background-image: url()
-}
-
-.tabletext{
-  text-align: center;
+#button-freehub-2, #learnmore, #learnmore-3col{
+  background-color: #FE775A;
+  border: 1px solid #FE775A;
   font-size: 20px;
   color: white;
+  padding: 20px 40px;
+  margin-bottom: 20px;
+
 
 }
 
-.colbox1{
-  height: 350px;
-  width: 250px;
-  background-color: Bisque;
-  float: left;
-  margin-left: 180px;
-
+#learnmore-3col{
+  font-size: 18px;
+  padding: 15px 30px;
+  position: absolute;
+  bottom: -4%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-
-.col-25{
-  background-color: DarkBlue;
-  width: 25%;
+#b-hs-sup{
+  background-color: lightgrey;
+  border: none;
+  color: #32495b;
+  padding: 8px 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  cursor: pointer;
+  border: 1px solid white;
+  border-radius: 4px;
+  display: block;
 }
 
-.dado{
-  width: 100%;
-  height: 100%;
-
-}
-.box-content5{
-  width: 300px;
-  height: 100px;
-  border: 1px solid black;
-  margin-left: 200px;
+.box-center{
+  background-color: white;
 }
 
-.box-content6{
-  width: 450px;
-  height: 100px;
-  border: 1px solid black;
-  margin-left: 150px;
+.box-center > div{
+  text-align: center;
+}
+
+.navbar-login .col-right i{
+  color: #0AA7BF;
+}
+
+input[type="button"]:hover{
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.nav-logo .row .col{
+  line-height: 100px;
+}
+
+.nav-logo .row .col > img{
+  max-height: 100%;
+  width:130px;
+  vertical-align: middle;
+}
+
+.nav-logo .row .col li{
+  display: inline-block;
+}
+
+.nav-logo .row .col li a{
+  display: inline-block;
+  text-decoration: none;
+  color: #32495B;
+  font-size: 1vw;
+  margin-right: 10px;
+}
+
+.imgbox-col{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
+#cube{
+  width: 40%;
+}
+
+#book{
+  width: 50%;
+}
+
+.box2grande-row-top .box-top{
+  text-align: center;
+  color: #32495B;
+}
+
+.box2grande-row-top .box-top h1{
+  font-size: 40px;
+  margin: 40px 0;
+}
+
+.box2grande-row-top .box-top p{
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+
+.box2-bottom{
+  background-color: #FFFFFF;
+}
+
+.box-3colonne .col{
+  width: calc(90% / 3);
+}
+
+.box2-top .box-3colonne .col:nth-child(2){
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.box2-top .box-center ul li{
+  display: inline-block;
+  text-decoration: none;
+}
+
+.box2-top .box-center .col:last-child{
+  color: #32495B;
+  text-align: left;
+}
+
+/* centrare testo verticalmente con h1 o p ??? */
+.box2-top .box-center .col:last-child h2{
+  padding: 40px 0 20px 0;
+}
+
+.box2-top .box-center .col:last-child h3{
+  padding: 20px 0;
+  display: inline-block;
+}
+
+.box2-top .box-center .col:last-child p{
+  font-size: 20px;
+  padding: 20px 150px 20px 0;
+}
+
+.box2-top .box-center .col:last-child li{
+  font-size: 20px;
+  padding: 20px 30px 20px 0;
+}
+
+.box2-top .box-center .col:last-child li i{
+  color: #FE775A;
+  padding-right: 10px;
+}
+
+.box2grande-row-top .box-center{
+  margin: 2% 0 5% 0;
+  box-shadow: 3px 3px 3px #E8EDF3, -3px -3px 3px #E8EDF3;
+}
+
+/* centrare hr a linea del h3 ??? */
+
+#hr-special{
+  display: inline-block;
+  width: 70%;
+  background-color: #A1A9AC;
+  border: none;
+  height: 3px;
+  margin-left: 40px;
+}
+
+.box2grande-row-top{
+  padding-bottom: 2%;
+}
+
+.box2grande-row-top .box2-top .box-3colonne .col{
   position: relative;
+  border-radius: .1875rem;
+  background-color: white;
+  box-shadow: 3px 3px 3px #E8EDF3, -3px -3px 3px #E8EDF3;
+}
 
+.box2grande-row-top .box2-top .box-3colonne .col img{
+  margin-bottom: 7%;
 }
-.footlink{
-  height: 200px;
+
+.box2grande-row-top .box2-top .box-3colonne .col img ~ *{
   text-align: center;
-  color: grey;
-  margin-top: 20px;
+  margin: auto;
+  color: #32495B;
 }
-.col > h5{
-  margin-top: 20px;
+
+.box2grande-row-top .box2-top .box-3colonne .col > p{
+  font-size: 20px;
+  padding: 10%;
+  padding-bottom: 0;
+}
+/* dovevo dividere in più bocchi fissi la colonna!!! */
+.box2grande-row-top .box2-top .box-3colonne .col:last-child p{
+  font-size: 18.5px;
+  padding: 10%;
+  padding-bottom: 0;
+}
+
+.box2grande-row-top .box2-top .box-3colonne .col ul{
+  list-style-type: none;
+  text-align: left;
+  margin-top: 10%;
+}
+
+.box2grande-row-top .box2-top .box-3colonne .col ul li i{
+  padding-left: 10%;
+  padding-right: 5%;
+  color: #FE775A;
+}
+
+.box2grande-row-top .box2-top .box-3colonne .col hr{
+  width: 80%;
+  background-color: #A1A9AC;
+  border: none;
+  height: 2px;
+  margin: 15% auto 10% auto ;
+}
+
+.box2grande-row-center{
+  position: relative;
+}
+
+.box2grande-row-center > .row{
   text-align: center;
-  font-size: 15px;
   color: white;
+  padding: 3% 0;
+}
+
+.box2grande-row-center > .row h1{
+  font-size: 37px;
+  padding-bottom: 2%;
+}
+
+.box2grande-row-center > .row p{
+  font-size: 16px;
+  line-height: 180%;
+}
+
+.table-row{
+  height: 50%;
+  width: 70%;
+  position: absolute;
+  left: 50%;
+  top: 65%;
+  transform: translate(-50%, -50%);
+}
+
+.first-table-row, .second-table-row{
+  height: 50%;
+}
+
+.col-table-item{
+  position: relative;
+}
+
+/* def row item cell */
+.cell-item{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white;
+}
+
+.cell-item .row{
+  margin: 5% 0;
+}
+
+.cell-item .row:first-child img{
+  max-width: 100%;
+  height: 35px;
+  margin-bottom: 8%;
+}
+
+.cell-item .row:nth-child(2){
+  font-size: 30px;
+}
+
+.cell-item .row:last-child{
+  font-size: 15px;
+  margin-top: 15%;
+}
+
+.first-table-row .col, .second-table-row .col{
+  width: calc(100% / 4);
+  height: 100%;
+  border-right: 1px solid white;
+}
+
+.first-table-row .col{
+  border-bottom: 1px solid white;
+}
+
+.first-table-row .col:last-child, .second-table-row .col:last-child{
+  border-right: none;
+}
+
+/* ?? */
+.box2-bottom .col-spe {
+  max-width: 100%;
+  padding: 5% 6%;
+  text-align: left;
+  color: #32495B;
+}
+
+.box2grande-row-bottom .box2-bottom .row > .col h2{
+  font-size: 50px;
+  margin-bottom: 15%;
+}
+
+.box2grande-row-bottom .box2-bottom .row > .col p{
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.box2grande-row-bottom .box2-bottom .row .col:last-child{
+  position: relative;
+}
+
+.logo-partner{
+  position: absolute;
+  top: 15%;
+  padding-left: 15%;
+  text-align: 50%;
+}
+
+.logo-partner img{
+  display: inline-block;
+  width: calc(90% / 4);
+  padding: 20px;
+  vertical-align: middle;
+}
+
+
+
+.box2grande-row-bottom .box2-bottom .row:last-child{
+  color: #32495B;
+  position: relative;
+}
+
+.box2grande-row-bottom .box2-bottom .row:last-child h1{
+  margin-bottom: 6%;
+}
+
+.box2grande-row-bottom .box2-bottom .row:last-child p{
+  font-size: 16px;
+  margin-bottom: 6%;
+}
+
+.box2grande-row-bottom .box2-bottom .row:last-child p:last-child{
+  font-size: 14px;
+  margin: 6% 0;
+}
+
+.box2grande-row-bottom .box2-bottom .row:last-child img{
+  position: absolute;
+  top: -24%;
+  right: 0;
 }
